@@ -31,6 +31,9 @@ Developer-visible changes:
       * The delegate GT.Net.ConnexionLifecycleNotification has been
         removed and replaced with System.Action<IConnexion>
 
+      * The delegate GT.Net.NewClientHandler has had its second argument
+        changed to pass an IDictionary, instead of a Dictionary
+
 Some bugs have been fixed since GT 2.0:
 
   * Server.UpdateAcceptors() threw an NullRefEx as it wasn't properly
